--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -50,6 +50,13 @@
                 /><br><br>
                 <input type="submit" value="Submit" />
             </form>
+            {% if weather %}
+               <h3>{{weather.region}}</h3>
+               <h3>{{weather.daytime}}</h3>
+               <h3>{{weather.temp}}</h3>
+               <h3>{{weather.status}}</h3>
+            {% end if %}
+
         </div>
     </body>
 </html>
