--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -26,7 +26,7 @@
                 margin-top: 20px;
             }
             input[type="submit"]{
-                width: 10%;
+                width: 15%;
                 padding: 10px;
                 border: 2px solid black;
                 background: black;
@@ -34,6 +34,7 @@
                 cursor: pointer;
                 font-size: medium;
                 text-transform: uppercase;
+                margin-bottom: 10px;
             }
         </style> 
     </head>
@@ -46,6 +47,7 @@
                     type="text"
                     name="city"
                     id="city"
+                    value="{{ request.GET.city }}"
                     placeholder="Enter the city"
                 /><br><br>
                 <input type="submit" value="Submit" />
@@ -55,7 +57,7 @@
                <h3>{{weather.daytime}}</h3>
                <h3>{{weather.temp}}</h3>
                <h3>{{weather.status}}</h3>
-            {% end if %}
+            {% endif %}
 
         </div>
     </body>
