--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -11,22 +11,32 @@
         <style>
             * {
                 margin: 0;
-                font-family: Arial, Helvetica, sans-serif;
                 box-sizing: border-box;
+                
+            }
+            body{ 
+                height: 100vh;
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                align-items: center;
+                background: linear-gradient(rgb(47,150,163),rgb(48,62,143));
+                font-family: sans-serif;
+                color: white;
             }
             #main {
                 text-align: center;
                 padding-top: 100px ;
             }
             input[type="text"]{
-                width: 30%;
+                width: 100%;
                 padding: 10px;
                 border: 2px solid black;
                 margin-bottom: 5px;
                 margin-top: 20px;
             }
             input[type="submit"]{
-                width: 15%;
+                width: 50%;
                 padding: 10px;
                 border: 2px solid black;
                 background: black;
@@ -34,7 +44,7 @@
                 cursor: pointer;
                 font-size: medium;
                 text-transform: uppercase;
-                margin-bottom: 10px;
+                margin-bottom: 15px;
             }
         </style> 
     </head>
@@ -52,11 +62,14 @@
                 /><br><br>
                 <input type="submit" value="Submit" />
             </form>
-            {% if weather %}
+            {% if weather.success %}
                <h3>{{weather.region}}</h3>
                <h3>{{weather.daytime}}</h3>
                <h3>{{weather.temp}}</h3>
                <h3>{{weather.status}}</h3>
+            {% endif %}
+            {% if weather.error %}
+               <h3>{{weather.error}}</h3>
             {% endif %}
 
         </div>
