--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -12,30 +12,32 @@
             * {
                 margin: 0;
                 box-sizing: border-box;
-                
             }
-            body{ 
+            body {
                 height: 100vh;
                 display: flex;
                 justify-content: center;
                 flex-direction: column;
                 align-items: center;
-                background: linear-gradient(rgb(47,150,163),rgb(48,62,143));
+                background: linear-gradient(
+                    rgb(47, 150, 163),
+                    rgb(48, 62, 143)
+                );
                 font-family: sans-serif;
                 color: white;
             }
             #main {
                 text-align: center;
-                padding-top: 100px ;
+                padding-top: 100px;
             }
-            input[type="text"]{
+            input[type="text"] {
                 width: 100%;
                 padding: 10px;
                 border: 2px solid black;
                 margin-bottom: 5px;
                 margin-top: 20px;
             }
-            input[type="submit"]{
+            input[type="submit"] {
                 width: 50%;
                 padding: 10px;
                 border: 2px solid black;
@@ -46,7 +48,7 @@
                 text-transform: uppercase;
                 margin-bottom: 15px;
             }
-        </style> 
+        </style>
     </head>
     <body>
         <div id="main">
@@ -59,19 +61,18 @@
                     id="city"
                     value="{{ request.GET.city }}"
                     placeholder="Enter the city"
-                /><br><br>
+                /><br /><br />
                 <input type="submit" value="Submit" />
             </form>
             {% if weather.success %}
-               <h3>{{weather.region}}</h3>
-               <h3>{{weather.daytime}}</h3>
-               <h3>{{weather.temp}}</h3>
-               <h3>{{weather.status}}</h3>
+            <h3>{{weather.region}}</h3>
+            <h3>{{weather.daytime}}</h3>
+            <h3>{{weather.temp}} &#176;C</h3>
+            <span><img src="{{weather.img}}" alt=""></span>
+            <h3>{{weather.status}}</h3>
+            {% endif %} {% if weather.error %}
+            <h3>{{weather.error}}</h3>
             {% endif %}
-            {% if weather.error %}
-               <h3>{{weather.error}}</h3>
-            {% endif %}
-
         </div>
     </body>
 </html>
